# Slots

./: CMakeLists.txt  build.cmake  build_vssln.bat  config.cmake  reels.txt  slots.cpp  winTable.txt
lib/: slots.cpp  slots.h
test/: test.cpp  test_slots.cpp
test/test_cases/1/: testParams.txt
test/test_cases/2/: reels.txt  testParams.txt  winTable.txt
test/test_cases/3/: reels.txt  winTable.txt
test/test_cases/4/: reels.txt  winTable.txt
test/test_cases/5/: reels.txt  testParams.txt  winTable.txt
test/test_cases/6/: reels.txt
